--- a/University/index.html
+++ b/University/index.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="css/normolize.libs.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="libs/ovl/owl.carousel.min.css">
+	<link rel="stylesheet" href="libs/ovl/owl.theme.default.min.css">
 	<style> body { opacity: 0; overflow-x: hidden; } html { background-color:#000;} </style>
 </head>
 <body>
@@ -73,104 +75,186 @@
 				<h2 class="specialties__title">Спеціальності які ми пропонуємо</h2>
 				<h2 class="visually-hidden">Специальности на кафедре "Информационых систем"</h2>
 			</header>
-			<div class="specialties__course">
-				
-				<img width = "5%" heigth = "5%" src="img/logo-color-ua.png" alt="" class="specialties__image visually-hidden">
-				
-				<div class="specialties__buttons mobail-version">
-					<div class="mobail-version__course">1 курс</div>
-					<div class="mobail-version__course">2 курс</div>
-					<div class="mobail-version__course">3 курс</div>
-					<div class="mobail-version__course">4 курс</div>
-				</div>
-			</div>
-			<div class="specialties__video our-video">
+			<div class="specialties__wrapper">
+				<div class="specialties__course">
 
-				<h2 class="visually-hidden">Видео с лекциями</h2>
-				<h2 class="our-video__title">Наші лекції</h2>
-				<iframe class = "our-video__youtube" width="560" height="315" src="https://www.youtube.com/embed/tGKlj-g6dWY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
-		</section>
+					<svg  class = "courses" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="417px" height="740px" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+					viewBox="0 0 4170 7400"
+					xmlns:xlink="http://www.w3.org/1999/xlink">
+					<defs>
+						<style type="text/css">
+						<![CDATA[
+						.str0 {stroke:black;stroke-width:9.99213}
+						.str1 {stroke:black;stroke-width:23.622}
+						.fil0 {fill:none}
+						.fil2 {fill:black}
+						.fil1 {fill:black;fill-rule:nonzero}
+						]]>
+					</style>
+				</defs>
+				<g id="layer">
+					<metadata id="CorelCorpID_0Corel-Layer"/>
+					<g id="first-block">
+						<ellipse class="fil0 str0" transform="matrix(1.50102 -0.0479695 0.0499898 1.56424 873.932 895.532)" rx="446" ry="440"/>
+						<polygon class="fil1" points="610,974 587,974 587,825 550,825 550,807 610,801 "/>
+						<polygon id="1" class="fil1" points="774,920 763,920 763,974 739,974 739,847 763,847 763,901 772,901 818,847 845,847 845,848 792,908 849,974 849,974 820,974 "/>
+						<path id="2" class="fil1" d="M908 927l4 16 1 0 31 -96 26 0 -53 147c-3,8 -8,16 -14,22 -6,6 -14,9 -24,9 -2,0 -5,0 -7,0 -3,-1 -6,-1 -7,-2l2 -18c0,0 1,0 4,1 4,0 6,0 7,0 4,0 9,-2 12,-7 3,-4 5,-9 7,-14l6 -13 -47 -125 26 0 26 80z"/>
+						<path id="3" class="fil1" d="M1098 916c0,18 -4,33 -13,44 -9,11 -21,17 -36,17 -8,0 -15,-2 -21,-4 -5,-3 -10,-7 -15,-12l0 62 -23 0 0 -176 18 0 4 17c4,-6 9,-11 15,-14 6,-3 13,-5 22,-5 15,0 28,6 36,19 9,12 13,29 13,49l0 3zm-23 -3c0,-14 -3,-26 -8,-35 -6,-10 -14,-14 -25,-14 -7,0 -13,1 -17,4 -5,3 -9,7 -12,13l0 61c3,5 7,9 12,12 4,3 10,5 17,5 11,0 19,-4 25,-12 6,-8 8,-19 8,-31l0 -3z"/>
+						<path id="4" class="fil1" d="M1177 959c7,0 13,-3 19,-8 5,-4 8,-10 8,-17l21 0 0 1c0,11 -4,20 -14,29 -10,8 -21,13 -34,13 -18,0 -31,-6 -41,-19 -10,-12 -15,-27 -15,-45l0 -5c0,-18 5,-33 15,-45 10,-12 23,-18 41,-18 14,0 26,4 35,13 9,9 13,20 13,32l0 1 -21 0c0,-8 -3,-14 -8,-20 -5,-5 -11,-8 -19,-8 -11,0 -19,5 -25,13 -5,9 -7,20 -7,32l0 5c0,13 2,24 7,32 5,9 14,14 25,14z"/>
+						<circle class="fil2" cx="2095" cy="780" r="100"/>
+					</g>
+					<g id="second-block">
+						<ellipse class="fil0 str0" transform="matrix(1.50102 -0.0479695 0.0499898 1.56424 3323.93 2695.53)" rx="446" ry="440"/>
+						<path class="fil1" d="M3100 2774l-106 0 0 -15 54 -64c9,-12 16,-21 19,-28 4,-7 5,-14 5,-21 0,-7 -2,-14 -7,-19 -4,-5 -11,-8 -19,-8 -10,0 -17,4 -23,10 -5,6 -8,14 -8,23l-22 0 0 -1c0,-14 4,-26 14,-35 10,-10 23,-15 39,-15 16,0 28,4 36,13 9,8 13,19 13,33 0,9 -2,17 -7,26 -5,9 -12,19 -23,32l-43 51 1 0 77 0 0 18z"/>
+						<polygon id="1" class="fil1" points="3224,2721 3213,2721 3213,2774 3189,2774 3189,2648 3213,2648 3213,2701 3222,2701 3268,2648 3295,2648 3295,2648 3242,2708 3299,2774 3299,2774 3270,2774 "/>
+						<path id="2" class="fil1" d="M3358 2727l4 16 1 0 31 -95 26 0 -53 146c-4,8 -8,16 -14,22 -6,6 -14,10 -24,10 -2,0 -5,-1 -7,-1 -3,0 -6,-1 -7,-1l2 -18c0,-1 1,0 4,0 4,0 6,0 7,0 4,0 8,-2 12,-6 3,-5 5,-10 7,-15l6 -13 -47 -124 26 0 26 79z"/>
+						<path id="3" class="fil1" d="M3548 2716c0,18 -4,33 -13,44 -9,11 -21,17 -36,17 -8,0 -15,-1 -21,-4 -5,-3 -10,-7 -15,-12l0 62 -23 0 0 -175 18 0 4 16c4,-6 9,-11 15,-14 6,-3 13,-5 22,-5 15,0 28,6 36,19 9,12 13,29 13,49l0 3zm-23 -3c0,-14 -3,-26 -8,-35 -6,-9 -14,-14 -25,-14 -7,0 -13,1 -17,4 -5,3 -9,8 -12,13l0 61c3,5 7,9 12,12 4,3 10,5 17,5 11,0 19,-4 25,-12 5,-8 8,-19 8,-31l0 -3z"/>
+						<path id="4" class="fil1" d="M3627 2759c7,0 13,-3 19,-7 5,-5 8,-11 8,-18l21 0 0 1c0,11 -4,21 -14,29 -10,9 -21,13 -34,13 -18,0 -31,-6 -41,-18 -10,-12 -15,-27 -15,-46l0 -5c0,-17 5,-32 15,-45 10,-12 23,-18 41,-18 14,0 26,5 35,13 9,9 13,20 13,33l0 0 -21 0c0,-7 -3,-14 -8,-19 -5,-6 -11,-9 -19,-9 -11,0 -19,5 -25,14 -5,8 -7,19 -7,31l0 5c0,13 2,24 7,33 5,8 14,13 25,13z"/>
+						<circle class="fil2" cx="2095" cy="2680" r="100"/>
+						<line class="fil0 str1" x1="2095" y1="990" x2="2095" y2= "2290" />
+					</g>
+					<g id="third-block">
+						<ellipse class="fil0 str0" transform="matrix(1.50102 -0.0479695 0.0499898 1.56424 873.932 4595)" rx="446" ry="440"/>
+						<path class="fil1" d="M537 4628l21 -3c2,12 6,21 12,26 6,6 13,8 22,8 10,0 18,-3 25,-10 7,-7 10,-16 10,-26 0,-9 -3,-17 -9,-24 -7,-6 -15,-9 -25,-9 -4,0 -9,1 -15,2l3 -18c1,0 2,0 3,0 9,0 17,-2 25,-7 7,-5 10,-12 10,-22 0,-7 -2,-14 -7,-19 -6,-5 -12,-7 -21,-7 -8,0 -15,2 -20,7 -6,6 -9,13 -11,24l-21 -4c3,-14 8,-25 18,-33 9,-8 20,-12 34,-12 9,0 18,2 26,6 8,4 14,10 18,17 4,7 6,14 6,22 0,7 -2,14 -6,20 -4,6 -10,11 -18,15 10,2 18,7 24,14 6,8 8,17 8,28 0,15 -5,28 -16,38 -11,11 -25,16 -42,16 -15,0 -27,-5 -37,-14 -10,-9 -16,-20 -17,-35z"/>
+						<path id="1" class="fil1" d="M743 4549l21 0 0 54c6,0 11,-1 14,-4 3,-2 7,-10 12,-22 4,-10 7,-17 10,-20 2,-3 5,-5 9,-6 3,-1 9,-2 16,-2l4 0 0 18 -6 0c-5,0 -9,0 -10,2 -2,2 -4,7 -8,15 -3,9 -6,14 -9,17 -2,3 -6,6 -12,9 9,2 18,11 27,25l23 39 -23 0 -23 -39c-5,-7 -9,-13 -12,-15 -3,-3 -8,-4 -12,-4l0 58 -21 0 0 -125z"/>
+						<path id="2" class="fil1" d="M850 4722l-3 -20c5,1 9,2 12,2 5,0 9,-1 12,-2 2,-2 5,-4 7,-7 1,-2 3,-7 6,-16 0,-1 1,-2 2,-5l-47 -125 22 0 26 72c4,9 7,19 9,29 3,-10 5,-19 9,-28l26 -73 22 0 -48 127c-5,14 -9,23 -11,28 -4,7 -9,12 -13,15 -5,4 -11,5 -18,5 -4,0 -8,-1 -13,-2z"/>
+						<path id="3" class="fil1" d="M968 4722l0 -173 19 0 0 17c5,-7 10,-11 15,-15 6,-3 13,-4 21,-4 11,0 20,2 28,8 8,5 15,13 19,23 4,10 6,21 6,33 0,12 -2,24 -7,34 -5,10 -11,18 -20,23 -9,6 -18,9 -27,9 -7,0 -14,-2 -19,-5 -6,-3 -10,-7 -14,-11l0 61 -21 0zm19 -110c0,16 3,28 10,36 6,7 14,11 23,11 10,0 18,-4 24,-12 7,-8 10,-20 10,-36 0,-16 -3,-28 -9,-36 -7,-8 -15,-12 -24,-12 -9,0 -17,4 -24,13 -7,8 -10,20 -10,36z"/>
+						<path id="4" class="fil1" d="M1183 4628l20 3c-2,14 -8,25 -17,33 -9,8 -21,13 -34,13 -17,0 -31,-6 -41,-17 -11,-11 -16,-27 -16,-48 0,-13 2,-25 7,-35 4,-10 11,-18 20,-23 9,-5 19,-7 30,-7 13,0 24,3 33,10 9,7 14,16 17,29l-21 3c-2,-8 -5,-15 -10,-19 -5,-4 -11,-6 -18,-6 -11,0 -20,4 -26,11 -7,8 -10,20 -10,36 0,17 3,29 9,37 7,7 15,11 25,11 9,0 16,-2 21,-7 6,-5 9,-13 11,-24z"/>
+						<line class="fil0 str1" x1="2095" y1="2990" x2="2095" y2= "4280" />
+						<circle class="fil2" cx="2095" cy="4580" r="100"/>
+					</g>
+					<g id="fourth-block">
+						<path class="fil1" d="M3030 6516l23 0 0 19 -23 0 0 39 -23 0 0 -39 -73 0 0 -13 72 -119 24 0 0 113zm-72 0l49 0 0 -80 -1 0 -2 6 -46 74z"/>
+						<polygon id="1" class="fil1" points="3173,6520 3161,6520 3161,6574 3138,6574 3138,6447 3161,6447 3161,6501 3171,6501 3216,6447 3243,6447 3244,6448 3191,6508 3248,6573 3247,6574 3219,6574 "/>
+						<path id="2" class="fil1" d="M3307 6527l4 16 1 0 31 -96 26 0 -54 146c-3,9 -8,16 -14,23 -6,6 -14,9 -24,9 -2,0 -4,0 -7,0 -3,-1 -5,-1 -7,-2l3 -18c-1,0 1,0 4,0 3,1 5,1 6,1 5,0 9,-2 12,-7 3,-4 6,-9 8,-14l5 -14 -47 -124 26 0 27 80z"/>
+						<path id="3" class="fil1" d="M3497 6515c0,19 -4,33 -13,45 -9,11 -21,16 -36,16 -8,0 -15,-1 -21,-4 -6,-2 -11,-6 -15,-11l0 62 -23 0 0 -176 18 0 3 17c4,-7 9,-11 16,-14 6,-4 13,-5 21,-5 16,0 28,6 37,19 9,12 13,28 13,49l0 2zm-23 -2c0,-15 -3,-26 -9,-36 -5,-9 -14,-13 -25,-13 -6,0 -12,1 -17,4 -4,3 -8,7 -11,12l0 62c3,5 7,9 11,12 5,3 11,4 17,4 11,0 20,-4 25,-12 6,-8 9,-18 9,-31l0 -2z"/>
+						<path id="4" class="fil1" d="M3576 6558c7,0 13,-2 18,-7 6,-4 8,-10 8,-17l21 0 0 1c1,11 -4,20 -14,29 -9,8 -21,12 -33,12 -18,0 -32,-6 -42,-18 -9,-12 -14,-27 -14,-45l0 -5c0,-18 5,-33 14,-45 10,-12 24,-18 42,-18 14,0 25,4 34,13 9,9 14,19 13,32l0 1 -21 0c0,-8 -2,-14 -7,-20 -5,-5 -12,-8 -19,-8 -12,0 -20,4 -25,13 -5,9 -8,20 -8,32l0 5c0,13 3,23 8,32 5,9 13,13 25,13z"/>
+						<line class="fil0 str1" x1="2095" y1="4850" x2="2095" y2= "6220" />
+						<circle class="fil2" cx="2095" cy="6480" r="100"/>
+						<ellipse class="fil0 str0" transform="matrix(1.50102 -0.0479695 0.0499898 1.56424 3272.42 6495)" rx="446" ry="440"/>
+					</g>
+				</g>
+			</svg>
 
-		<section class="turn">
-			<header class="turn__header">
-				<h2 class="turn__title">Складно обрати спеціальність?</h2>
-				<h2 class="visually-hidden">Отличие специальностей на кафедре</h2>
-			</header>
-			<div class="turn__is">
-				<h3 class="turn__is-title">Інформаційні системи | ІС</h3>
-				<ul class="turn__is-list turn__list--check">
-					<li class="turn__is-item">Lorem ipsum dolor.</li>
-					<li class="turn__is-item">Maiores, laborum, enim!</li>
-					<li class="turn__is-item">Quidem, deleniti. Nam!</li>
-				</ul>
+			<div class="specialties__buttons mobail-version">
+				<div class="mobail-version__course">1 курс</div>
+				<div class="mobail-version__course">2 курс</div>
+				<div class="mobail-version__course">3 курс</div>
+				<div class="mobail-version__course">4 курс</div>
 			</div>
-			<div class="turn__sks">
-				<h3 class="turn__sks-title">Спеціалізованні каскадні системи | СКС </h3>
-				<ul class="turn__sks-list">
-					<li class="turn__sks-item">Lorem ipsum dolor.</li>
-					<li class="turn__sks-item">Doloremque, ullam, recusandae?</li>
-					<li class="turn__sks-item">Numquam, inventore, molestias!</li>
-				</ul>
-			</div>
-		</section>
+		</div>
+		<div class="specialties__video our-video">
 
-		<section class="teachers">
-			<header class="teachers__header">
-				<h2 class="teachers__title">Наші викладачі</h2>
-				<h2 class="visually-hidden">Наши преподаватели</h2>
-			</header>
-			<div class="teachers__wrapper carusel">
-				<div class="carusel__item">
-					<img src="#" alt="" class="carusel__image">
-					<article class="carusel__information">Lorem ipsum dolor sit.</article>
-				</div>
-				<div class="carusel__item">
-					<img src="#" alt="" class="carusel__image">
-					<article class="carusel__information">Obcaecati tenetur facilis tempore.</article>
-				</div>
-				<div class="carusel__item">
-					<img src="#" alt="" class="carusel__image">
-					<article class="carusel__information">Quae vitae suscipit quod!</article>
-				</div>
-			</div>
-		</section>
+			<h2 class="visually-hidden">Видео с лекциями</h2>
+			<h2 class="our-video__title">Наші лекції</h2>
+			<iframe class = "our-video__youtube" width="560" height="315" src="https://www.youtube.com/embed/tGKlj-g6dWY?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+	</div>
+</section>
 
-		<section class="partners">
-			<header class="partners__header">
-				<h2 class="partners__title">Нащі партнери</h2>
-				<h2 class="visually-hidden">Партрнёры кафедры</h2>
-			</header>
-			<div class="partners__agilie agaile">
-				<img src="#" alt="" class="agalie__image agalie__image--border-red">
-				<h3 class="agalie__title">Agalie</h3>
-			</div>
-		</section>
+<section class="turn">
+	<!-- TEST -->
+	<div class="wave">
+		<div class="ellipse ellipse1"></div>
+		<div class="ellipse ellipse2"></div>
+		<div class="ellipse ellipse2"></div>
+		<div class="ellipse ellipse2"></div>
+	</div>
+	<!--  -->
+	<header class="turn__header">
+		<h2 class="turn__title">Складно обрати спеціальність?</h2>
+		<h2 class="visually-hidden">Отличие специальностей на кафедре</h2>
+	</header>
+	<div class="turn__wrapper">
+		<div class="turn__is">
+			<h3 class="turn__is-title turn__is-title--green">
+				<i class="fa fa-check" aria-hidden="true"></i>
+				Інформаційні системи <span class = "turn__span"> | </span> ІС
+			</h3>
+			<ul class="turn__is-list turn__list--check">
+				<li class="turn__is-item">Lorem ipsum dolor.</li>
+				<li class="turn__is-item">Maiores, laborum, enim!</li>
+				<li class="turn__is-item">Quidem, deleniti. Nam!</li>
+			</ul>
+		</div>
+		<div class="turn__sks">
+			<h3 class="turn__sks-title">Спеціалізованні каскадні системи <span class = "turn__span">|</span> СКС </h3>
+			<ul class="turn__sks-list">
+				<li class="turn__sks-item">Lorem ipsum dolor.</li>
+				<li class="turn__sks-item">Doloremque, ullam, recusandae?</li>
+				<li class="turn__sks-item">Numquam, inventore, molestias!</li>
+			</ul>
+		</div>
+	</div>
+</section>
 
-		<section class="students">
-			<header class="sudents__header">
-				<h2 class="students__title">Наші студенти</h2>
-				<h2 class="visially-hidden">Лучшие студенты кафедры</h2>
-			</header>
-			<div class="students__wrapper">
-				<div class="students__items">
-					<img src="#" alt="" class="student__photo">
-					<div class="student__name">Иван Иванов</div>
-					<article class="comments">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, excepturi.</article>
-				</div>
-			</div>
-		</section>
+<section class="teachers">
+	<header class="teachers__header">
+		<h2 class="teachers__title">Наші викладачі</h2>
+		<h2 class="visually-hidden">Наши преподаватели</h2>
+	</header>
+	<div class="teachers__wrapper carusel owl-carousel">
 
-		<section class="contacts">
-			<header class="contacts__header">
-				<h2 class="contacts__title">Ми знаходымось</h2>
-				<h2 class="visually-hidden">Мы находимся</h2>
-			</header>
-			<div class="contacts__map"></div>
-			<div class="contacts__information">Lorem ipsum dolor sit amet.</div>
-		</section>
+		<div class="carusel__item">
+			<img src="img/teachers-photo.png" alt="" class="carusel__image">
+			<div class="carusel__Name">Иван Иванович</div>
+			<article class="carusel__information">
+				Obcaecati tenetur facilis tempore.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, culpa.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+				Velit mollitia omnis accusamus saepe hic deserunt ratione libero numquam consequuntur optio.
+			</article>
+		</div>
 
-	</main>
+		<div class="carusel__item">
+			<img src="img/teachers-photo.png" alt="" class="carusel__image">
+			<div class="carusel__Name">Иван Иванов</div>
+			<article class="carusel__information">
+				Obcaecati tenetur facilis tempore.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, culpa.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+				Velit mollitia omnis accusamus saepe hic deserunt ratione libero numquam consequuntur optio.
+			</article>
+		</div>
+
+	</div>
+</section>
+
+<section class="partners">
+	<header class="partners__header">
+		<h2 class="partners__title">Нащі партнери</h2>
+		<h2 class="visually-hidden">Партрнёры кафедры</h2>
+	</header>
+	<div class="partners__agilie agaile">
+		<img src="#" alt="" class="agalie__image agalie__image--border-red">
+		<h3 class="agalie__title">Agalie</h3>
+	</div>
+</section>
+
+<section class="students">
+	<header class="sudents__header">
+		<h2 class="students__title">Наші студенти</h2>
+		<h2 class="visially-hidden">Лучшие студенты кафедры</h2>
+	</header>
+	<div class="students__wrapper">
+		<div class="students__items">
+			<img src="#" alt="" class="student__photo">
+			<div class="student__name">Иван Иванов</div>
+			<article class="comments">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, excepturi.</article>
+		</div>
+	</div>
+</section>
+
+<section class="contacts">
+	<header class="contacts__header">
+		<h2 class="contacts__title">Ми знаходымось</h2>
+		<h2 class="visually-hidden">Мы находимся</h2>
+	</header>
+	<div class="contacts__map"></div>
+	<div class="contacts__information">Lorem ipsum dolor sit amet.</div>
+</section>
+
+</main>
 	<!-- <footer class="page-footer">
 		<ul class="page-footer__list">
 			<li class="page-list__item">Головна</li>
@@ -197,7 +281,12 @@
 			<script src="libs/respond/respond.min.js"></script>
 		<![endif]-->
 		<!-- Just jquery -->
+		<script
+		src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+		crossorigin="anonymous"></script>
+		<script type = 'text/javascript' src = "libs/ovl/owl.carousel.min.js"></script>
 		<link rel="stylesheet" href="css/main.css">
-		<script type = 'text/javascript' src = 'js/common.js'></script>
+		<script type = 'text/javascript' src = "js/common.js"></script>
 	</body>
 	</html>
