--- a/University/index.html
+++ b/University/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="###" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="logo-color-ua.png" />
+	<link rel="shortcut icon" href="logo-color-ua.ico" />
 	<link rel="stylesheet" href="css/normolize.libs.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
