--- a/University/index.html
+++ b/University/index.html
@@ -20,12 +20,13 @@
 		<div class="page-header__first-nav top-line">
 			
 			<a href="#" class="top-line__logo">
-				<img width ="30px" heigth = "50px" src="img/logo-color-ua.png" alt="" class="top-line__image">
+				<img width ="30px" heigth = "50px" src="img/logo-color-ua.png" alt="logo-header" class="top-line__image">
 				<p class = "top-line__text" >
 					Кафедра 
 					информационных 
 					систем
 				</p>
+				<img class = "top-line__line" src="img/line-header.svg" alt="line-header">
 			</a>
 			<div class = "top-line__wrapper">
 				<div class="top-line__social-bar">
@@ -44,28 +45,28 @@
 			<div class="page-nav__burger">
 				<i class="fa fa-align-justify" aria-hidden="true"></i>
 			</div>
-			<ul  hidden class="page-nav__list">
-				<li class="page-nav__item"><a href="#">головна</a></li>
-				<li class="page-nav__item"><a href="#">абітурієнтам</a></li>
-				<li class="page-nav__item"><a href="#">студентам</a></li>
-				<li class="page-nav__item"><a href="#">кафедри</a></li>
-				<li class="page-nav__item"><a href="#">наукова діяльність</a></li>
-			</ul>
+			<div class="page-nav__list" hidden>
+				<a hidden href = "#" class="page-nav__item">головна</a>
+				<a hidden href = "#" class="page-nav__item">абітурієнтам</a>
+				<a hidden href = "#" class="page-nav__item">студентам</a>
+				<a hidden href = "#" class="page-nav__item">кафедри</a>
+				<a hidden href = "#" class="page-nav__item">наукова діяльність</a>
+			</div>
 		</nav>
 		<div class="page-header__wrapper">
-		<div class="page-header__about-site">
-			<h2 class="page-header__descript">Кафедра</h2>
-			<h1 class="page-header__title">Інформаційних систем</h1>
-			<div class="page-header__information button-items">
-				<div class="button-items__learn-more">
-					<a href="#">Дізнатись більше</a>
-				</div>
-				<div class="button-items__open">
-					<a href="#">Кафедра</a>
+			<div class="page-header__about-site">
+				<h2 class="page-header__descript">Кафедра</h2>
+				<h1 class="page-header__title">Інформаційних систем</h1>
+				<div class="page-header__information button-items">
+					<div class="button-items__learn-more">
+						<a href="#">Дізнатись більше</a>
+					</div>
+					<div class="button-items__open">
+						<a href="#">Кафедра</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</header>
 	
 	<main class="page-main">
@@ -181,6 +182,7 @@
 				<li class="turn__is-item">Quidem, deleniti. Nam!</li>
 			</ul>
 		</div>
+		<img class = "turn__line" src="img/line-turn.svg" alt="turn-line">
 		<div class="turn__sks">
 			<h3 class="turn__sks-title">Спеціалізованні каскадні системи <span class = "turn__span">|</span> СКС </h3>
 			<ul class="turn__sks-list">
@@ -200,7 +202,7 @@
 	<div class="teachers__wrapper carusel owl-carousel">
 
 		<div class="carusel__item">
-			<img src="img/teachers-photo.png" alt="" class="carusel__image">
+			<img src="img/teachers-photo.png" alt="teacher-photo" class="carusel__image">
 			<div class="carusel__Name">Иван Иванович</div>
 			<article class="carusel__information">
 				Obcaecati tenetur facilis tempore.
@@ -211,7 +213,7 @@
 		</div>
 
 		<div class="carusel__item">
-			<img src="img/teachers-photo.png" alt="" class="carusel__image">
+			<img src="img/teachers-photo.png" alt="teacher-photo" class="carusel__image">
 			<div class="carusel__Name">Иван Иванов</div>
 			<article class="carusel__information">
 				Obcaecati tenetur facilis tempore.
@@ -237,12 +239,12 @@
 	</header>
 	<div class="partners__wrapper">
 		<div class="partners__agilie agilie">
-			<img src="img/logo-agilie.png" alt="" class="agalie__image agalie__image--border-red">
+			<img src="img/logo-agilie.png" alt="partners-logo" class="agalie__image agalie__image--border-red">
 			<h3 class="agilie__title">Agilie</h3>
 		</div>
 
 		<div class="partners__agilie agilie">
-			<img src="img/logo-agilie.png" alt="" class="agalie__image agalie__image--border-red">
+			<img src="img/logo-agilie.png" alt="partners-logo" class="agalie__image agalie__image--border-red">
 			<h3 class="agilie__title">Agilie</h3>
 		</div>
 	</div>
@@ -264,6 +266,7 @@
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, excepturi.
 				dolor sit amet, consectetur adipisicing elit.adipisicing elit. Commodi.
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, praesentium.
+				<img class = "students__line" src="img/line-students.svg" alt="line-students">
 			</article>
 		</div>
 
@@ -275,7 +278,9 @@
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, excepturi.
 				dolor sit amet, consectetur adipisicing elit.adipisicing elit. Commodi.
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, praesentium.
+				<img class = "students__line" src="img/line-students.svg" alt="line-students">
 			</article>
+
 		</div>
 
 	</div>
@@ -299,17 +304,20 @@
 </section>
 
 </main>
- <footer class="page-footer">
-	<ul class="page-footer__list">
-		<li class="page-list__item">Головна</li>
-		<li class="page-list__item">Абітуріентам</li>
-		<li class="page-list__item">Студентам</li>
-		<li class="page-list__item">Кафедра</li>
-		<li class="page-list__item">Наукова діяльність</li>
-	</ul>
-	<h3 class="page-footer__who-make">
-		Slardarius (c) 2018
-	</h3>
+<footer class="page-footer">
+
+	<div class="page-footer__wrapper">
+		<ul class="page-footer__list">
+			<li class="page-footer__item"><a href="#">Головна</a></li>
+			<li class="page-footer__item"><a href="#">Абітуріентам</a></li>
+			<li class="page-footer__item"><a href="#">Студентам</a></li>
+			<li class="page-footer__item"><a href="#">Кафедра</a></li>
+			<li class="page-footer__item"><a href="#">Наукова діяльність</a></li>
+		</ul>
+		<h3 class="page-footer__who-make">
+			Slardarius (c) 2018
+		</h3>
+	</div>
 </footer> 
 
 
