--- a/University/index.html
+++ b/University/index.html
@@ -6,8 +6,9 @@
 	<meta name="description" content="Сайт кафедри інформаційних систем." />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="logo-color-ua.ico" />
-	<link rel="icon" type="image/x-icon" href="https://example.com/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="logo-color-ua.ico">
+
+	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -320,9 +321,8 @@
 			<script src="libs/respond/respond.min.js"></script>
 		<![endif]-->
 
+
 		
-		<link rel="stylesheet" href="css/normolize.libs.min.css">
-		<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 		<link rel="stylesheet" href="libs/ovl/owl.carousel.min.css">
 		<link rel="stylesheet" href="libs/fontawesome/font-awesome.min.css">
 		<script type = 'text/javascript' src = "js/jquery.js"></script>
