--- a/University/index.html
+++ b/University/index.html
@@ -7,9 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="logo-color-ua.ico">
-
-	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" property = "stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
+	<link rel="stylesheet" property = "stylesheet" href="css/main.css">
 </head>
 <body>
 	<header class="page-header">
