--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -1,209 +1,226 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>SLARDARIUS | WEB DEVELOPER</title>
-	<meta name="description" content="###" />
+	<title>Slardarius - web developer</title>
+	<meta name="description" content="Сайт портфолио" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
-
-	<link rel="stylesheet" href="css/normolize.libs.min.css">
-	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
+	<link rel="stylesheet" property = "stylesheet" href="css/normolize.css">
+	<link rel="stylesheet" property = "stylesheet" href="css/main.css">
+	<link rel="stylesheet" property = "stylesheet" href="css/fontawesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<style> body { opacity: 0; overflow-x: hidden; } html { background-color:#000;} </style>
 </head>
 <body>
-
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="top_line">
-					<div class="col-md-3 col-sm-3">
-						<div class="top_line__logo">Slardarius</div>
-					</div>
-					<div class="col-md-9 col-sm-9">
-						<div class="top_line__menu">
-							<nav>
-								<ul class = 'hidden-xs'>
-									<li><a href="">обо мне</a></li>
-									<li><a href="">портфолио</a></li>
-									<li><a href="">обратная связь </a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-				</div>
+	<header id= "page-header" class="page-header">
+		<nav class="page-header__navigation">
+			<div class="page-header__burger">
+				<i class="fas fa-align-justify"></i>
+			</div>
+			<div class="page-header__wrapper">
+				<a hidden class = "page-header__item" href="#page-header">Главная</a>
+				<a hidden class = "page-header__item" href="#about-me">обо мне</a>
+				<a hidden class = "page-header__item" href="#skills">работы</a>
+				<a hidden class = "page-header__item" href="#contacts">обртаная связь</a>
+			</div>
+		</nav>
+		<div class="page-header__information">
+			<div class="page-header__name">
+				<!-- <img height = "3px" src="img/top-line.svg" alt=""> -->
+				<h2>slardarius</h2>
+				<!-- <img height = "3px"  src="img/top-line.svg" alt=""> -->
+			</div>
+			<div class="page-header__desc">
+				<h1>front end & web design <span>разработчик</span></h1>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="center_content">
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="center_content__title">
-							<span>slardarius </span>
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="center_content__inform">
-							front end &#38; web design
-						</div>
-					</div>
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="center_content__inform">
-							разработчик
-						</div>
-					</div>
-				</div>
+		<div class="page-header__buttons">
+			<div class="page-header__about-me">
+				<a href="#">обо мне</a>
+			</div>
+			<div class="page-header__order">
+				<a href="#">сделать заказ</a>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row">
-				<div class="bottom_content">
-					<div class="col-md-3 col-md-push-2 col-sm-3 col-sm-push-2 col-xs-12">
-						<div class="button bottom_content__button_about">обо мне</div>
-					</div>
-					<div class="col-md-3 col-md-push-4 col-sm-3 col-sm-push-4 col-xs-12">
-						<div class="button bottom_content__button_work">сделать заказ</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-sm-12 col-xs-12">
-					<div class="buttons__next">
-						<i class="fa fa-chevron-down" aria-hidden="true"></i>
-					</div>
-				</div>
-			</div>
+		<div class="page-header__animation page-header__animation--active">
+			<a href="#about-me"> <i class="fas fa-angle-down"></i> </a>
 		</div>
 	</header>
-	<section class ="AboutMe">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="AboutMe__title">Запасчиков Артём Сергеевич</div>
+	<main class="page-main">
+		<section id = "about-me" class="about-me">
+			<header class="about-me__header">
+				<h2>не много о себе</h2>
+			</header>
+			<div class="about-me__my-name">
+				Здравствуйте, я Запасчиков Артем Сергеевич.
+			</div>
+			<div class="about-me__aducation">
+				<h3>Образование</h3>
+				<ul class="about-me__list">
+					<li class="about-me__item">
+						“Химико-технологический колледж” г. Каменское, специальность - “Разработка програмного обеспечения”, 
+						2012-2015г. 
+					</li>
+					<li class="about-me__item">
+						УДХТУ(Украиский Государственный Химико-технологический университет г.Днепр 
+						специальность “Информационные системы”,2016-2018г.
+					</li>
+				</ul>
+			</div>
+			<div class="about-me__another-project">
+				<h3>Сторонние проекты</h3>
+				<ul class="about-me__list-project">
+					<li class="about-me__item-project">
+						Веб студия "Delta Digital."
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section id = "skills" class="skills">
+			<header class="skills__header">
+				<h2 class = "visually-hidden">Личные качества разработчика</h2>
+			</header>
+			<div class="skills__wrapper">
+				<div class="skills__project">
+					<img width = "200px" height = "150px" src="img/site.jpg" alt="">
 				</div>
-				<div class="col-md-12">
-					<div class="AboutMe__education">
-						<p class = 'title'>Образование:</p>
-						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-							“Химико-технологический колледж” г. Каменское, специальность - “Разработка програмного 			 	обеспечения”, 2012-2015г. 
-						</p>
-						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-							УДХТУ(Украиский Государственный Химико-технологический университет г.Днепр специальность “Информационные системы”,2016-2018г.
-						</p> 
-						<p class = 'title'>Сторонние проекты:</p>
-						<p class = 'information' ><i class="fa fa-circle" aria-hidden="true"></i>
-							"Дни Турбиных" - работаю на позиции Front end и Веб дизайнер.
-						</p> 
-					</div>
+				<div class="skills__my-skills">
+					<h3>Личные качества</h3>
+					<ul class="skills__list">
+						<li class="skills__item">внимательность и высокая ответственность</li>
+						<li class="skills__item">коммуникабельность</li>
+						<li class="skills__item">страсть к перфекционизму</li>
+						<li class="skills__item">способность понятно излагать свои 
+						мысли — 	как устно, так и письменно.</li>
+					</ul>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="PersonalQualities">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<div class="PersonalQualities__img">
-						<img src="img/27.jpg" alt="WORK">
-						<p class = 'Group' >Дни Турбиных</p>
-					</div>
+		</section>
+		<section class="technology">
+			<header class="technology__header">
+				<h2 class = "visually-hidden" >Технологии которые использует разработчик</h2>
+			</header>
+			<div class="technology__wrapper">
+				<div class="technology__my-technology">
+					<h3>Технологии</h3>
+					<ul class="technology__list">
+						<li class="technology__item">html</li>
+						<li class="technology__item">css</li>
+						<li class="technology__item">sass</li>
+						<li class="technology__item">javascript</li>
+						<li class="technology__item">react</li>
+					</ul>
 				</div>
-				<div class="col-md-5 col-md-push-1">
-					<div class="PersonalQualities__text">
-						<p class = 'Name'>личные качества</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						внимательность и высокая ответственность</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						коммуникабельность</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						страсть к перфекционизму</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-							способность понятно излагать свои 
-						мысли — 	как устно, так и письменно.</p>
-
-					</div>
+				<div class="technology__project">
+					<img width = "200px" height = "150px" src="img/site.jpg" alt="">
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="Technologies">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<div class="PersonalQualities__text">
-						<p class = 'Name'>Технологии</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						html</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						css</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						javascript</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-							sass</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-							ReactJS</p>
-					</div>
+		</section>
+		<section class="professional">
+			<header class="professional__header">
+				<h2 class="visually-hidden">Профессиональные качества разработчика</h2>
+			</header>
+			<div class="professional__wrapper">
+				<div class="professional__project">
+					<img width = "200px" height = "150px" src="img/site.jpg" alt="">
 				</div>
-				<div class="col-md-6">
-					<div class="Technologies__img">
-						<img src="img/27.jpg" alt="WORK">
-						<p class = 'Group' >Fresh Food</p>
-					</div>
+				<div class="professional__my-professional">
+					<h3>Профессиональные качества</h3>
+					<ul class="professional__list">
+						<li class="professional__item">Слышу и понимаю Вас</li>
+						<li class="professional__item">Проектирование UI/UX - архитектуру</li>
+						<li class="professional__item">Разработка отзывчевого сайте</li>
+						<li class="professional__item">Виртуозно использую шрифты</li>
+					</ul>
 				</div>
 			</div>
-		</div>
-	</section>
-
-	<section class="WoksSkill">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6">
-					<div class="WoksSkill__img">
-						<img src="img/27.jpg" alt="WORK">
-						<p class = 'Group' >Fresh Food</p>
+		</section>
+		<section class="develop-site">
+			<header class="develop-site__header">
+				<h2 class="visially-hidden">Разработка сайта</h2>
+				<h2 class="visually-hidden">Разработка сайта</h2>
+			</header>
+			<div class="develop-site__wrapper">
+				<div class="develop-site__item">
+					<img width = "75px" height = "75px" src="img/prototype.svg" alt="Prototype site">
+					<div class="develop-site__desc">
+						разработка прототипа сайта
 					</div>
 				</div>
-				<div class="col-md-5 col-md-push-1">
-					<div class="WoksSkill__text">
-						<p class = 'Name'>Профессиональные качества</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						Слышу и понимаю Вас.</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						Проектирование UI/UX - архитектуру	</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-						Разработка отзывчевого сайте</p>
-						<p class = 'List'> <i class="fa fa-check" aria-hidden="true"></i>
-							Виртуозно использую шрифты</p>
-					</div>
+				<div class="develop-site__line-wrapper">
+					<svg  class = "line"
+					xmlns="http://www.w3.org/2000/svg"
+					xmlns:xlink="http://www.w3.org/1999/xlink"
+					width="0px" height="3px">
+					<path fill-rule="evenodd"  stroke="rgb(176, 0, 33)" stroke-width="10px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(176, 0, 33)"
+					d="M5.000,6.000 L5.000,5.000 L160.000,5.000 L160.000,6.000 L5.000,6.000 Z"/>
+				</svg>
+			</div>
+			<div class="develop-site__item">
+				<img width = "75px" height = "75px" src="img/verstka.svg" alt="Prototype site">
+				<div class="develop-site__desc">
+					Верстка
 				</div>
 			</div>
+			<div class="develop-site__line-wrapper">
+				<svg class = "line"
+				xmlns="http://www.w3.org/2000/svg"
+				xmlns:xlink="http://www.w3.org/1999/xlink"
+				width="0px" height="3px">
+				<path fill-rule="evenodd"  stroke="rgb(176, 0, 33)" stroke-width="10px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(176, 0, 33)"
+				d="M5.000,6.000 L5.000,5.000 L160.000,5.000 L160.000,6.000 L5.000,6.000 Z"/>
+			</svg>
 		</div>
-	</section>
-	<section class="Modeling">
-		<div class="container">
-			<div class="row">
-				<div class="lineFrist  hidden-xs hidden-sm"></div>
-				<div class="lineSecond hidden-xs hidden-sm"></div>
-				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/1.png" alt="Prototype">
-				<p>Разработка прототипа сайта</p>
-				</div>
-				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/2.png" alt="Making">
-					<p class = 'Modeling__' >верстка</p>
-				</div>
-				<div class="col-md-4 col-sm-4 col-xs-12"><img src="img/3.png" alt="Adaptive">
-					<p>адаптация под любые устройства</p>
-				</div>
+		<div class="develop-site__item">
+			<img width = "75px" height = "75px" src="img/adaptive.svg" alt="Prototype site">
+			<div class="develop-site__desc">
+				Адаптивизация под любые устройства
 			</div>
 		</div>
-	</section>
-
-
-
-
+	</div>
+</section>
+<section id = "contacts" class="contacts">
+	<div class="contacts__wrapper">
+		<div class="contacts__linked">
+			Так же вы можете <span>связаться</span> со мной в:
+			<a href="https://www.linkedin.com/in/артем-запасчиков-25111b149" target = "_blank"><i class="fab fa-linkedin-in"></i></a>
+			 | 
+			<a href="http://t.me/slardarius" target = "_blank"><i class="fab fa-telegram"></i></a>
+		</div>
+		<div class="contacts__form">
+			<form action="">
+				<div class="contacts__Name">
+					<label for="Name">Ваше имя:</label>
+					<input name = "Name" type="text">
+				</div>
+				<div class="contacts__Number">
+					<label for="Number">Ваш номер:</label>
+					<input name = "Number" ype="text">
+				</div>
+				<div class="contacts__Comments">
+					<label for="Comment">Ваш комментарий:</label>
+					<textarea name="Comment" cols="30" rows="10"></textarea>
+				</div>
+				<input type="button" value = "Свяжитесь со мной">
+			</form>
+		</div>
+	</div>
+</section>
+</main>
+<footer class="page-footer">
+	<div class="page-footer__wrapper">
+		<ul class="page-footer__list">
+			<li class="page-footer__item"><a href="#">главная</a></li>
+			<li class="page-footer__item"><a href="#">обо мне</a></li>
+			<li class="page-footer__item"><a href="#">работы</a></li>
+			<li class="page-footer__item"><a href="#">обртаная связь</a></li>
+		</ul>
+		<div class="page-footer__who-make">
+			(c) slardarius 2018
+		</div>
+	</div>
+</footer>
 
 	<!--[if lt IE 9]>
 			<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -212,8 +229,9 @@
 			<script src="libs/respond/respond.min.js"></script>
 		<![endif]-->
 		<!-- Just jquery -->
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+		<script type = 'text/javascript' src = 'js/jquery.js'></script>
 		<script type = 'text/javascript' src = 'js/common.js'></script>
-		<script type = 'text/javascript' src = 'js/libs.min.js'></script>
 	</body>
 	</html>
