--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -149,43 +149,58 @@
 					</div>
 				</div>
 				<div class="develop-site__line-wrapper">
-					<svg  class = "line"
-					xmlns="http://www.w3.org/2000/svg"
-					xmlns:xlink="http://www.w3.org/1999/xlink"
-					width="0px" height="3px">
-					<path fill-rule="evenodd"  stroke="rgb(176, 0, 33)" stroke-width="10px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(176, 0, 33)"
-					d="M5.000,6.000 L5.000,5.000 L160.000,5.000 L160.000,6.000 L5.000,6.000 Z"/>
-				</svg>
-			</div>
-			<div class="develop-site__item">
-				<img width = "75px" height = "75px" src="img/verstka.svg" alt="Prototype site">
-				<div class="develop-site__desc">
-					Верстка
-				</div>
-			</div>
-			<div class="develop-site__line-wrapper">
-				<svg class = "line"
-				xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink"
-				width="0px" height="3px">
-				<path fill-rule="evenodd"  stroke="rgb(176, 0, 33)" stroke-width="10px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(176, 0, 33)"
-				d="M5.000,6.000 L5.000,5.000 L160.000,5.000 L160.000,6.000 L5.000,6.000 Z"/>
+					
+					<svg xmlns="http://www.w3.org/2000/svg" width="333" height="13" viewBox="0 0 333 13">
+						<metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
+							<x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
+							<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
+							<rdf:Description rdf:about=""/>
+						</rdf:RDF>
+					</x:xmpmeta>                                                                                                                         
+					<?xpacket end="w"?></metadata>
+					<defs>
+						<style>
+						.cls-1 {
+							fill: #b00021;
+							stroke: #b00021;
+							stroke-width: 10px;
+							fill-rule: evenodd;
+						}
+					</style>
+				</defs>
+				<path id="Фигура_2" data-name="Фигура 2" class="cls-1" d="M555,3039v-3H878v3H555Z" transform="translate(-550 -3031)"/>
 			</svg>
+
 		</div>
 		<div class="develop-site__item">
-			<img width = "75px" height = "75px" src="img/adaptive.svg" alt="Prototype site">
+			<img width = "75px" height = "75px" src="img/verstka.svg" alt="Prototype site">
 			<div class="develop-site__desc">
-				Адаптивизация под любые устройства
+				Верстка
 			</div>
 		</div>
+		<div class="develop-site__line-wrapper">
+			<svg class = "line"
+			xmlns="http://www.w3.org/2000/svg"
+			xmlns:xlink="http://www.w3.org/1999/xlink"
+			width="0px" height="3px">
+			<path fill-rule="evenodd"  stroke="rgb(176, 0, 33)" stroke-width="10px" stroke-linecap="butt" stroke-linejoin="miter" fill="rgb(176, 0, 33)"
+			d="M5.000,6.000 L5.000,5.000 L160.000,5.000 L160.000,6.000 L5.000,6.000 Z"/>
+		</svg>
 	</div>
+	<div class="develop-site__item">
+		<img width = "75px" height = "75px" src="img/adaptive.svg" alt="Prototype site">
+		<div class="develop-site__desc">
+			Адаптивизация под любые устройства
+		</div>
+	</div>
+</div>
 </section>
 <section id = "contacts" class="contacts">
 	<div class="contacts__wrapper">
 		<div class="contacts__linked">
 			Так же вы можете <span>связаться</span> со мной в:
 			<a href="https://www.linkedin.com/in/артем-запасчиков-25111b149" target = "_blank"><i class="fab fa-linkedin-in"></i></a>
-			 | 
+			| 
 			<a href="http://t.me/slardarius" target = "_blank"><i class="fab fa-telegram"></i></a>
 		</div>
 		<div class="contacts__form">
