--- a/Slardarius/index.html
+++ b/Slardarius/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru/uk">
 <head>
-	<title>Кафедра інформаційних систем</title>
+	<title>2sКафедра інформаційних систем</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Сайт кафедри інформаційних систем." />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
